Fix desktop main pitch text shadow overlap

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -344,7 +344,7 @@ $offer-card-padding: 3rem
       max-width: 90%
 
   &__title
-    line-height: 1.18
+    line-height: 1.36
     color: #fefefe
     padding-top: 17%
 
